<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_layout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="#1e2f83"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title2"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title3"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#ff0000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnLoad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLoad"
            android:layout_weight=".5"/>

        <Button
            android:id="@+id/btnDetect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDetection"
            android:layout_weight=".5" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:labelFor="@id/btnDetect"
        android:lines="20"
        android:scrollHorizontally="true"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/author"
        android:textColor="#2cc749"
        android:textStyle="italic" />

</LinearLayout>